<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <RelativeLayout
        android:id="@+id/rlyut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="400dp">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/img6" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@drawable/img12" />

            <ImageView
                android:id="@+id/logout"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_margin="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                app:srcCompat="@drawable/img13" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView9"
                android:layout_alignStart="@id/imageView9"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/home_txt_4"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView6"
                android:layout_alignStart="@id/imageView9"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/home_txt_5"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/rl1"
                    android:layout_width="150dp"
                    android:layout_height="170dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/img8">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="false"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        app:srcCompat="@drawable/img9" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/imageView6"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/roboto"
                        android:lineSpacingExtra="8sp"
                        android:text="@string/home_txt_1"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="24sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl2"
                    android:layout_width="150dp"
                    android:layout_height="170dp"
                    android:layout_margin="5dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/img8">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="false"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        app:srcCompat="@drawable/img10" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/imageView7"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/roboto"
                        android:lineSpacingExtra="8sp"
                        android:text="@string/home_txt_2"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="24sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl3"
                    android:layout_width="150dp"
                    android:layout_height="170dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/img8">

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="false"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        app:srcCompat="@drawable/img11" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/imageView8"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/roboto"
                        android:lineSpacingExtra="8sp"
                        android:text="@string/home_txt_3"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="24sp" />

                </RelativeLayout>

            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlyut"
        android:layout_marginTop="40dp"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/img5" />

</RelativeLayout>